syntax = "proto3";

package settings.v1;

option go_package = "github.com/q-controller/qcontroller/src/generated/settings/v1;v1";

message VM {
    uint32 cpus = 1;
    string memory = 2;
    string disk = 3;
}

message Cache {
    string root = 1;
}

message Bridge {
    string name = 1;
    string subnet = 2;
    string gateway = 3;
}

message LinuxSettings {
    Bridge bridge = 1;
}

message ControllerConfig {
    uint32 port = 1;
    Cache cache = 2;
    string root = 3;
    string qemu_endpoint = 4;
}

message QemuConfig {
    uint32 port = 1;
    Cache cache = 2;
    string root = 3;
    
    oneof platform_specific {
        LinuxSettings linux_settings = 4;
    }
}

message GatewayConfig {
    uint32 port = 1;
    string controller_endpoint = 2;
    bool expose_swagger_ui = 3;
}
